--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TempProject</string>
+    <string name="app_name">Rat Race</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="something_went_heywire">Something went haywire !!</string>
